[metadata]
name = indico-plugin-my-custom-top-menu-link
version = 2.3
description = Indico plugin that adds a custom top menu link
license = MIT

[options]
py_modules = indico_my_custom_top_menu_link
zip_safe = false
install_requires =
    indico>=2.3.4

[options.entry_points]
indico.plugins =
    my_custom_top_menu_link = indico_my_custom_top_menu_link:MyCustomTopMenuLinkPlugin